--- a/Persistence/DataContext.csproj
+++ b/Persistence/DataContext.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Tables\Tables.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
